# playwright-enterprise-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: playwright.yml
config/: dev.yaml  settings.py  staging.yaml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 32727c027e589cec.json  3a73e3fdc75ad390.json  49c62d273494d72.json  4e8b1e1e653833e9.json  57eb31a288472bac.json  5e238288b5b6ccd2.json  733a03d9b9d86267.json  a73c7a669b388ebc.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_information_page.py  checkout_overview_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/: test_e2e_checkout.py  test_login.py
widgets/: duration-trend.json  duration.json  severity.json  suites.json  summary.json
