[tool.poetry]
name = "test_demo"
version = "0.1.0"
description = "Playwright + Pytest automation framework"
authors = ["Automation Team <qa@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = ">=1.40,<2.0"
pytest = ">=7.0,<9.0"
allure-pytest = ">=2.13,<3.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
pyyaml = ">=6.0,<7.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0,<1.0.0"
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"
mypy = ">=1.8.0,<2.0.0"
pre-commit = ">=3.6.0,<4.0.0"
pytest-xdist = ">=3.6.0,<4.0.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
